<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchDatabase">

    <ListView
        android:id="@+id/listView_Data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_search" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_inputSearch" />

    <EditText
        android:id="@+id/edit_inputSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_searchWelcome" />

    <TextView
        android:id="@+id/textView_searchWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioRoom" />

        <RadioButton
            android:id="@+id/radioButton_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioTemp" />

        <RadioButton
            android:id="@+id/radioButton_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioDate" />

        <RadioButton
            android:id="@+id/radioButton_hottest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioHot" />

        <RadioButton
            android:id="@+id/radioButton_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_delete" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>